
ChangeLog
 [ + added, - removed, * changed ]
 + 13Jan2014 Added advanced functionalities in the on-line mode (automatic threshold, conversion from detail to burst, phase profiling)
             Added new MPI statistics
             Changed the management of the HWC_CHANGE_EV
             Updated version to 3.0rc3
 * 09Jan2014 Extended sampling addresses support
 * 07Jan2014 Support up to 256 parameters for Intel OMP/runtime.
 * 18Dec2013 Improved support to instrument OpenCL in Apple machines
 + 04Dec2013 Added example of OpenMP using LD_PRELOAD in Linux
 + 03Dec2013 Added a new configure flag (--with-mpi-lib-name) to force the specific name of the MPI library to link with.
             Changed the mallinfo() wrapper (Extrae_memusage_Wrapper) to emit absolute values instead of deltas.
             Removed the initialization calls to Extrae_memusage_set_to_0_Wrapper().
 * 29Nov2013 Added initial Java instrumentation (--with-java at configure)
             Added initial Extrae command line instrumentation
             Added gettimeofday clock
             Added flag for David Carrera's Hadoop instrumentation (--enable-dcarrera-hadoop)
             Bring MPI I/O instrumentation back to life
 * 22Nov2013 Honor <cuda enabled> and <opencl enabled>
             MFB missing OpenCL probes
             Experimental support for isntrumenting I/O & dynamic memory calls
 * 21Nov2013 Added improved support to instrument nanos+MPI apps including
               examples for OmpSs and MPI+OmpSs
             In Linux, merging process automatically uses binary name as
               default trace file name and no longer requires -e neither in xml.
             Add checkers for PIC/noPIC code in instrumentation libraries that use dlsym
 * 07Nov2013 Disallow --with-X= in the configure line
 * 05Nov2013 Added -rpath to the used MPI library to all lib*mpi*so libraries
             Fix segfault when no performance counters are given to Extrae