@@ -33,9 +33,6 @@ static char UNUSED rcsid[] = "$Id: OnlineControl.cpp 2093 2013-09-05 16:43:35Z g
 
 #include <iostream>
 #include <fstream>
-#ifdef HAVE_SYS_SELECT_H
-# include <sys/select.h>
-#endif
 #ifdef HAVE_UNISTD_H
 # include <unistd.h>
 #endif
