@@ -1,6 +1,8 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
+ * 20Jan2014 Added initialization of mutex in the on-line root that went missing in the previous update
+             Updated version to 3.0rc4
  + 13Jan2014 Added advanced functionalities in the on-line mode (automatic threshold, conversion from detail to burst, phase profiling)
              Added new MPI statistics
              Changed the management of the HWC_CHANGE_EV
